# talento_peru_jobs

./: .env.example  .vercelignore  Pipfile  app.py  capture_page.py  commit.bat  docker-compose.yaml  etl.ipynb  extract_data.py  main.py  main_details.py  multi.py  notebook.ipynb  pyproject.toml  read.ipynb  readme.md  recomender.ipynb  requirements.txt  scrapper_requets.bat  scrapper_works_worker1.bat  scrapper_works_worker2.bat  scrapper_works_worker3_lima.bat  spam_inei.js  transform_data.py  works.py
.github/workflow/: scrapper_works_cas.yml
.github/workflows/: python-app.yml  scrapper_jobs_details.yml  scrapper_works_cas.yml  scrapping_headers_requests.yml  windows_fw.yml
.trash/: read.ipynb  recomender.ipynb
DAG/: scrapping_jobs.py
TalentAPI/: init_supabase.py
TalentPeru/: __init__.py  data_in_page.py  filters_page.py  main.py  selenium_init.py  types_src.py  utils.py
TalentPeru/Scrapper/: global_env.py  utils.py  with_requests.py
TalentPeru/Scrapper_jobs/: api_jobs.py  detailed_jobs.py  global_env.py  utils.py  with_requests.py
TalentPeru/api/: jobs.py
TalentPeru/chrome_seleniumpy/: data_in_page.py  filters_page.py  navigation_pages.py  selenium_init.py  types_src.py
TalentPeru/extract/: __init__.py
TalentPeru/logs/: exists.py  (+1 more)
dags/: dags.py
data/: AMAZONAS.csv  APURIMAC.csv  AYACUCHO.csv  CAJAMARCA.csv  HUANCAVELICA.csv  JUNIN.csv  UCAYALI.csv
data_logs/: logs.csv
logs/: logs.csv
ollama/: chroma.sqlite3
ollama1/: chroma.sqlite3
src/: data_in_page.py  filters_page.py  navigation_pages.py  selenium_init.py  types_src.py  utils.py
(+1209 files in other folders)
