[tool.poetry]
name = "talento-peru-jobs"
version = "0.1.0"
description = ""
authors = ["jhon <fr.jhonk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = "^2.2.2"
requests = "^2.32.3"
tqdm = "^4.67.1"
rich = "^13.9.4"
bs4 = "^0.0.2"
python-dotenv = "^1.0.1"
lxml = "^5.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
